[package]
authors = [ "Anonymous" ]
build = "build.rs"
description = "A new parachain template powered by Tuxedo and Cumulus."
# repository.workspace = true
edition = "2021"
name = "parachain-template-node"
publish = false
version = "0.1.0"

[dependencies]
async-io = { workspace = true }
clap = { features = [ "derive" ], workspace = true }
color-print = { workspace = true }
futures = { workspace = true }
jsonrpsee = { features = [ "server" ], workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
serde = { features = [ "derive" ], workspace = true }

# Local
parachain-template-runtime = { features = [ "parachain" ], package = "tuxedo-template-runtime", path = "../tuxedo-template-runtime" }
tuxedo-core = { path = "../tuxedo-core" }

# Substrate
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-cli = { default-features = false, workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-rpc = { workspace = true }
sc-service = { default-features = false, workspace = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }

# Cumulus / Polkadot
cumulus-client-cli = { default-features = false, workspace = true }
cumulus-client-collator = { workspace = true }
cumulus-client-consensus-aura = { workspace = true }
cumulus-client-consensus-common = { workspace = true }
cumulus-client-consensus-proposer = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-relay-chain-interface = { workspace = true }
polkadot-cli = { features = [ "rococo-native" ], default-features = false, workspace = true }
polkadot-primitives = { workspace = true }

# We need to depend on this explicitly so we can enable the "full-node" feature
# See https://github.com/paritytech/polkadot-sdk/issues/2551 for more details
polkadot-service = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
rocksdb = [ "sc-cli/rocksdb", "sc-service/rocksdb" ]
