[package]
name = "tuxedo-core"
version = "1.0.0-dev"
repository = 'https://github.com/Off-Narrative-Labs/Tuxedo'
edition = "2021"
license = "Apache-2.0"
description = "Core components that all Tuxedo runtimes will use."

[dependencies]
log = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
parity-scale-codec = { workspace = true, features = ['derive'] }
scale-info = { workspace = true, features = ["derive"] }
parity-util-mem = { workspace = true, optional = true }

aggregator = { path = "aggregator" }
derive-no-bound = { path = "no_bound" }

sp-api = { workspace = true, default_features = false}
sp-debug-derive = { workspace = true, default_features = false, features = ["force-debug"] }
sp-core = { workspace = true, default_features = false}
sp-io = { workspace = true, default_features = false, features = ["with-tracing"] }
sp-runtime = { workspace = true, default_features = false}
sp-std = { workspace = true, default_features = false}
sp-storage = { workspace = true, default_features = false}

[dev-dependencies]
array-bytes = { workspace = true }

[features]
default = ["std"]
std = [
	"sp-debug-derive/std",
	"parity-scale-codec/std",
	"sp-core/std",
	"sp-std/std",
	"serde",
	"sp-api/std",
	"sp-io/std",
	"sp-runtime/std",
	"parity-util-mem",
	"sp-storage/std",
]
