[package]
description = "Core components that all Tuxedo runtimes will use."
edition = "2021"
license = "Apache-2.0"
name = "tuxedo-core"
repository = "https://github.com/Off-Narrative-Labs/Tuxedo"
version = "1.0.0-dev"

[dependencies]
async-trait = { optional = true, workspace = true }
log = { workspace = true }
parity-scale-codec = { features = [ "derive" ], workspace = true }
parity-util-mem = { optional = true, workspace = true }
scale-info = { features = [ "derive" ], workspace = true }
serde = { features = [ "derive" ], optional = true, workspace = true }

aggregator = { path = "aggregator" }
derive-no-bound = { path = "no_bound" }

sp-api = { default_features = false, workspace = true }
sp-core = { default_features = false, workspace = true }
sp-debug-derive = { features = [ "force-debug" ], default_features = false, workspace = true }
sp-inherents = { default_features = false, workspace = true }
sp-io = { features = [ "with-tracing" ], default_features = false, workspace = true }
sp-runtime = { default_features = false, workspace = true }
sp-std = { default_features = false, workspace = true }
sp-storage = { default_features = false, workspace = true }

# Genesis Builder dependencies
sc-client-api = {  optional = true, workspace = true }
sc-chain-spec = { optional = true, workspace = true }
sc-executor = { optional = true, workspace = true }
sp-blockchain = { optional = true, workspace = true }

[dev-dependencies]
array-bytes = { workspace = true }

[features]
default = [ "std" ]
std = [
	"async-trait",
	"sp-debug-derive/std",
	"parity-scale-codec/std",
	"sp-core/std",
	"sp-std/std",
	"serde",
	"sp-api/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-runtime/std",
	"parity-util-mem",
	"sp-storage/std",
	"sc-client-api",
	"sc-chain-spec",
	"sc-executor",
	"sp-blockchain"
]
