[package]
description = "Core components that all Tuxedo runtimes will use."
edition = "2021"
license = "Apache-2.0"
name = "tuxedo-core"
repository = "https://github.com/Off-Narrative-Labs/Tuxedo"
version = "1.0.0-dev"

[dependencies]
async-trait = { optional = true, workspace = true }
log = { workspace = true }
parity-scale-codec = { features = [ "derive" ], workspace = true }
parity-util-mem = { optional = true, workspace = true }
scale-info = { features = [ "derive" ], workspace = true }
serde = { features = [ "derive" ], workspace = true }

# Macros in Tuxedo Core
aggregator = { path = "aggregator" }
derive-no-bound = { path = "no_bound" }
tuxedo-register-validate-block = { path = "register_validate_block" }

# Substrate
sp-api = { default_features = false, workspace = true }
sp-core = { default_features = false, workspace = true }
sp-debug-derive = { features = [ "force-debug" ], default_features = false, workspace = true }
sp-inherents = { default_features = false, workspace = true }
sp-io = { features = [ "with-tracing" ], default_features = false, workspace = true }
sp-runtime = { default_features = false, workspace = true }
sp-std = { default_features = false, workspace = true }
sp-storage = { default_features = false, workspace = true }

# Added during Polkadot / Cumulus support
# TODO these should all be feature gated
bytes = { version = "1.4.0", default_features = false }
cumulus-primitives-core = { default_features = false, workspace = true }
sp-trie = { workspace = true, default_features = false }
sp-state-machine = { workspace = true, default_features = false }
trie-db = { workspace = true, default_features = false }
frame-support = { default_features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" } #TODO THIS ONE MUST GO BEFORE MERGING
polkadot-parachain-primitives = {default_features = false, workspace = true }
cumulus-primitives-parachain-inherent = { workspace = true }
sp-externalities = { workspace = true, default_features = false }

[dev-dependencies]
array-bytes = { workspace = true }

# Polkadot / Cumulus
# TODO maybe feature gated?
cumulus-test-client = { workspace = true }
cumulus-test-relay-sproof-builder = { workspace = true }
sp-keyring = {workspace = true }


[features]
default = [ "std" ]
std = [
	"async-trait",
	"sp-debug-derive/std",
	"parity-scale-codec/std",
	"sp-core/std",
	"sp-std/std",
	"serde/std",
	"sp-api/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-runtime/std",
	"parity-util-mem",
	"sp-storage/std",
	"cumulus-primitives-core/std",
	"tuxedo-register-validate-block/std",
	"sp-trie/std",
	"sp-state-machine/std",
	"trie-db/std",
	"frame-support/std",
	"polkadot-parachain-primitives/std",
	"cumulus-primitives-parachain-inherent/std",
	"sp-externalities/std",
]
