[package]
description = "Tuxedo extensions to provide Polkadot parachain support."
edition = "2021"
license = "Apache-2.0"
name = "tuxedo-parachain-core"
repository = "https://github.com/Off-Narrative-Labs/Tuxedo"
version = "1.0.0-dev"

[dependencies]
async-trait = { optional = true, workspace = true }
log = { workspace = true }
parity-scale-codec = { features = [ "derive" ], workspace = true }
parity-util-mem = { optional = true, workspace = true }
scale-info = { features = [ "derive" ], workspace = true }
serde = { features = [ "derive" ], workspace = true }

# Local
tuxedo-core = { default-features = false, path = "../tuxedo-core" }
tuxedo-register-validate-block = { default_features = false, path = "register_validate_block" }

# Substrate
sp-api = { default_features = false, workspace = true }
sp-core = { default_features = false, workspace = true }
sp-debug-derive = { features = [ "force-debug" ], default_features = false, workspace = true }
sp-inherents = { default_features = false, workspace = true }
sp-io = { features = [ "with-tracing" ], default_features = false, workspace = true }
sp-runtime = { default_features = false, workspace = true }
sp-std = { default_features = false, workspace = true }

# Polkadot / Cumulus
bytes = { version = "1.4.0", default_features = false }
cumulus-primitives-core = { default_features = false, workspace = true }
cumulus-primitives-parachain-inherent = { default_features = false, workspace = true }
polkadot-parachain-primitives = { features = [ "wasm-api" ], default_features = false, workspace = true }
sp-externalities = { default_features = false, workspace = true }
sp-state-machine = { default_features = false, workspace = true }
sp-trie = { default_features = false, workspace = true }
trie-db = { default_features = false, workspace = true }

[dev-dependencies]
array-bytes = { workspace = true }
cumulus-test-client = { workspace = true }
cumulus-test-relay-sproof-builder = { workspace = true }
sp-keyring = { workspace = true }
sp-tracing = { workspace = true }


[features]
default = [ "std" ]
std = [
	"async-trait",
	"cumulus-primitives-core/std",
	"cumulus-primitives-parachain-inherent/std",
	"serde/std",
	"sp-api/std",
	"sp-core/std",
	"sp-debug-derive/std",
	"sp-externalities/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-state-machine/std",
	"sp-std/std",
	"sp-trie/std",
	"parity-scale-codec/std",
	"parity-util-mem",
	"polkadot-parachain-primitives/std",
	"trie-db/std",
	"tuxedo-core/std",
	"tuxedo-register-validate-block/std",
]
