[package]
name = "tuxedo-template-runtime"
version = "1.0.0-dev"
repository = 'https://github.com/Off-Narative-Labs/Tuxedo'
edition = "2021"
license = "Apache-2.0"
description = "An example and template runtime built with Tuxedo."

[dependencies]
log = "0.4"
serde = { version = "1.0", optional = true, features = ["derive"] }
parity-scale-codec = { version = '3.4.0', default-features = false, features = ['derive'] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
parity-util-mem = { version = '0.12.0', optional = true }

sp-api = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-05", default_features = false}
sp-debug-derive = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-05", default_features = false, features = ["force-debug"] }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-05", default_features = false}
sp-core = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-05", default_features = false}
sp-inherents = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-05", default_features = false}
sp-io = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-05", default_features = false, features = ["with-tracing"] }
sp-offchain = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-05", default_features = false}
sp-runtime = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-05", default_features = false}
sp-session = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-05", default_features = false}
sp-std = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-05", default_features = false}
sp-storage = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-05", default_features = false}
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-05", default_features = false}
sp-version = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-05", default_features = false}
sp-timestamp = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-05", default_features = false}

# These were added for Aura / Grandpa API support
hex-literal = "0.4.1"
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-05", default_features = false}
sp-application-crypto = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-05", default_features = false}
sp-consensus-grandpa = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-05", default_features = false}

# Tuxedo Core and Pieces
tuxedo-core = { git = "https://github.com/Off-Narrative-Labs/Tuxedo", branch = "main", default-features = false }
money = { git = "https://github.com/Off-Narrative-Labs/Tuxedo", branch = "main", default-features = false }
runtime-upgrade = { git = "https://github.com/Off-Narrative-Labs/Tuxedo", branch = "main", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-05" }

[dev-dependencies]
trybuild = "1.0.80"
sp-keystore = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-05", default_features = false }

[features]
default = ["std"]
std = [
	"sp-debug-derive/std",
	"sp-block-builder/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"parity-scale-codec/std",
	"sp-core/std",
	"sp-std/std",
	"serde",
	"sp-api/std",
	"sp-session/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"parity-util-mem",
	"sp-storage/std",
	"sp-consensus-aura/std",
	"sp-application-crypto/std",
	"sp-consensus-grandpa/std",

	"tuxedo-core/std",
	"money/std",
	"runtime-upgrade/std",
]
