[package]
name = "tuxedo-template-runtime"
version = "1.0.0-dev"
repository = 'https://github.com/Off-Narative-Labs/Tuxedo'
edition = "2021"
license = "Apache-2.0"
description = "An example and template runtime built with Tuxedo."

[dependencies]
log = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
parity-scale-codec = { workspace = true, features = ['derive'] }
scale-info = { workspace = true, features = ["derive"] }
parity-util-mem = { workspace = true, optional = true }

sp-api = { workspace = true, default_features = false}
sp-debug-derive = { workspace = true, default_features = false, features = ["force-debug"] }
sp-block-builder = { workspace = true, default_features = false}
sp-core = { workspace = true, default_features = false}
sp-inherents = { workspace = true, default_features = false}
sp-io = { workspace = true, default_features = false, features = ["with-tracing"] }
sp-runtime = { workspace = true, default_features = false}
sp-session = { workspace = true, default_features = false}
sp-std = { workspace = true, default_features = false}
sp-storage = { workspace = true, default_features = false}
sp-transaction-pool = { workspace = true, default_features = false}
sp-version = { workspace = true, default_features = false}
sp-timestamp = { workspace = true, default_features = false}

# These were added for Aura / Grandpa API support
hex-literal = { workspace = true }
sp-consensus-aura = { workspace = true, default_features = false}
sp-application-crypto = { workspace = true, default_features = false}
sp-consensus-grandpa = { workspace = true, default_features = false}

# Tuxedo Core and Pieces
tuxedo-core = { path = '../tuxedo-core', default-features = false }
amoeba = { path = '../wardrobe/amoeba', default-features = false }
money = { path = '../wardrobe/money', default-features = false }
poe = { path = '../wardrobe/poe', default-features = false }
kitties = { path = '../wardrobe/kitties', default-features = false }
runtime-upgrade = { path = '../wardrobe/runtime_upgrade', default-features = false }

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[dev-dependencies]
sp-keystore = { workspace = true, default_features = false }

[features]
default = ["std"]
std = [
	"sp-debug-derive/std",
	"sp-block-builder/std",
	"sp-inherents/std",
	"parity-scale-codec/std",
	"sp-core/std",
	"sp-std/std",
	"serde",
	"sp-api/std",
	"sp-session/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"parity-util-mem",
	"sp-storage/std",
	"sp-consensus-aura/std",
	"sp-application-crypto/std",
	"sp-consensus-grandpa/std",

	"tuxedo-core/std",
	"amoeba/std",
	"money/std",
	"poe/std",
	"kitties/std",
	"runtime-upgrade/std",
]
