[package]
name = "tuxedo-template-wallet"
version = "1.0.0-dev"
repository = 'https://github.com/Off-Narrative-Labs/Tuxedo'
edition = "2021"
license = "Apache-2.0"
description = "A simple example / template wallet built for the tuxedo template runtime"

[dependencies]
runtime = { path = "../tuxedo-template-runtime", package = "tuxedo-template-runtime"}
tuxedo-core = { path = "../tuxedo-core" }

serde_json = "1.0"
parity-scale-codec = { version = '3.4.0', default-features = false }
jsonrpsee = { version = "0.16.2", features = ["http-client"] }
tokio = { version = "1.25.0", features = ["full"] }
anyhow = "1.0.69"
hex = "0.4.3"
hex-literal = "0.4.1"
clap = { version = "4.1.8", features = [ "derive"] }
directories = "5.0.0"
sled = "0.34.7"
futures = "0.3"
env_logger = "0.10.0"
log = "0.4.17"

sp-runtime = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-04" }
sp-core = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-04" }
sp-keystore = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-04" }
sc-keystore = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-04" }