[package]
name = "tuxedo-template-wallet"
version = "1.0.0-dev"
repository = 'https://github.com/Off-Narrative-Labs/Tuxedo'
edition = "2021"
license = "Apache-2.0"
description = "A simple example / template wallet built for the tuxedo template runtime"

[dependencies]
runtime = { path = "../tuxedo-template-runtime", package = "tuxedo-template-runtime"}
tuxedo-core = { path = "../tuxedo-core" }

serde_json = { workspace = true }
parity-scale-codec = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
clap = { workspace = true, features = [ "derive"] }
directories = { workspace = true }
sled = { workspace = true }
futures = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-keystore = { workspace = true }
sc-keystore = { workspace = true }
