[package]
description = "A simple example / template wallet built for the tuxedo template runtime"
edition = "2021"
license = "Apache-2.0"
name = "tuxedo-template-web-service-wallet"
repository = "https://github.com/Off-Narrative-Labs/Tuxedo"
version = "1.0.0-dev"

[dependencies]
runtime = { package = "tuxedo-template-runtime", path = "../tuxedo-template-runtime" }
tuxedo-core = { path = "../tuxedo-core" }

anyhow = { workspace = true }
clap = { features = [ "derive" ], workspace = true }
directories = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
jsonrpsee = { features = [ "http-client" ], workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
serde_json = { workspace = true }
sled = { workspace = true }
tokio = { features = [ "full" ], workspace = true }

rand = "0.8"

sc-keystore = { workspace = true }
sp-core = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }

axum = "0.5.16"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.3.4", features = ["cors"] }
