[package]
name = "derive-no-bound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.15", features = ["extra-traits", "full"]}
quote = "1.0.23"
proc-macro2 = "1.0.60"
