[package]
name = "tuxedo-register-validate-block"
version = "0.1.0"
edition = "2021"
description = "Proc macro to register Polkadot's validate_block entrypoint in your Tuxedo Runtime. Inspired by cumulus-pallet-parachain-system-proc-macro"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.38"
proc-macro2 = "1.0.64"
quote = "1.0.33"
proc-macro-crate = "1.3.1"

[features]
default = [ "std" ]
std = []
