[package]
description = "Proc macro to register Polkadot's validate_block entrypoint in your Tuxedo Runtime. Inspired by cumulus-pallet-parachain-system-proc-macro"
edition = "2021"
name = "tuxedo-register-validate-block"
version = "0.1.0"

[dependencies]
proc-macro-crate = "1.3.1"
proc-macro2 = "1.0.64"
quote = "1.0.33"
syn = "2.0.38"

[features]
default = [ "std" ]
std = []

[lib]
proc-macro = true
