[package]
name = "kitties"
version = "0.1.0"
edition = "2021"
description = "A Tuxedo piece that provides an NFT game loosely inspired by crypto kitties"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuxedo-core = { path = '../../tuxedo-core', default-features = false }
serde = { workspace = true, optional = true, features = ["derive"] }
parity-scale-codec = { workspace = true, features = ['derive'] }
scale-info = { workspace = true, features = ["derive"] }
sp-runtime = { workspace = true, default_features = false}
sp-std = { workspace = true, default_features = false}
sp-core = { workspace = true, default_features = false}

[features]
default = ["std"]
std = [
    "tuxedo-core/std",
    "parity-scale-codec/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "serde",
]
