[package]
description = "A Tuxedo piece that provides an NFT game loosely inspired by crypto kitties"
edition = "2021"
name = "kitties"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = { features = [ "derive" ], workspace = true }
scale-info = { features = [ "derive" ], workspace = true }
serde = { features = [ "derive" ], optional = true, workspace = true }
sp-core = { default_features = false, workspace = true }
sp-runtime = { default_features = false, workspace = true }
sp-std = { default_features = false, workspace = true }
tuxedo-core = { default-features = false, path = "../../tuxedo-core" }

[features]
default = [ "std" ]
std = [
	"tuxedo-core/std",
	"parity-scale-codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
	"serde",
]
