[package]
name = "poe"
version = "0.1.0"
edition = "2021"
description = "A Tuxedo piece that register proofs of existence on chain"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuxedo-core = { path = '../../tuxedo-core', default-features = false }
serde = { workspace = true, optional = true, features = ["derive"] }
parity-scale-codec = { workspace = true, features = ['derive'] }
scale-info = { workspace = true, features = ["derive"] }
sp-runtime = { workspace = true, default_features = false}
sp-core = { workspace = true, default_features = false}
sp-std = { workspace = true, default_features = false}

[features]
default = ["std"]
std = [
    "tuxedo-core/std",
    "parity-scale-codec/std",
    "sp-runtime/std",
    "serde",
    "sp-core/std",
    "sp-std/std",
]
