[package]
name = "runtime-upgrade"
version = "0.1.0"
edition = "2021"
description = "A Tuxedo piece that allows upgrading the runtime code of a live chain dynamically"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuxedo-core = { path = '../../tuxedo-core', default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }
parity-scale-codec = { version = '3.4.0', default-features = false, features = ['derive'] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-runtime = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-07", default_features = false}
sp-std = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-07", default_features = false}
sp-io = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-07", default_features = false}
sp-storage = { git = 'https://github.com/paritytech/substrate', tag = "monthly-2023-07", default_features = false}

[features]
default = ["std"]
std = [
    "tuxedo-core/std",
    "parity-scale-codec/std",
    "sp-runtime/std",
    "serde",
    "sp-std/std",
    "sp-io/std",
    "sp-storage/std",
]